tests/diagnostics_golden/diag_pr118c_shift_count_out_of_range.txt
Diagnostics Golden: PR11.8c Shift Count Out Of Range
Source: tests/negative/neg_pr118c_shift_count_out_of_range.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr118c_shift_count_out_of_range.safe:4:14: error: unsupported numeric expression binary
  |
  | 4 |       return binary (8) (1) >> 8
  |   |              ^~~~~~~~~~~~~~~~~~~
  |
------------------------------------------------------------------------
